--- a/src/ui/fxml/LoadGameMenu.fxml
+++ b/src/ui/fxml/LoadGameMenu.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.text.Text?>
 <VBox xmlns="http://javafx.com/javafx"
       xmlns:fx="http://javafx.com/fxml"
-      fx:controller="LoadGameMenuController"
+      fx:controller="ui.LoadGameMenuController"
       prefHeight="400.0" prefWidth="600.0">
     <Text>LOAD GAME</Text>
 </VBox>
