--- a/src/ui/fxml/MainMenu.fxml
+++ b/src/ui/fxml/MainMenu.fxml
@@ -8,8 +8,8 @@
 
 <VBox xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="MainMenuController"
-            stylesheets="style.css"
+            fx:controller="ui.MainMenuController"
+            stylesheets="../style.css"
             styleClass="mainMenu"
             alignment="BOTTOM_RIGHT"
             spacing="20">
