--- a/assets/ui/fxml/MainMenu.fxml
+++ b/assets/ui/fxml/MainMenu.fxml
@@ -8,7 +8,7 @@
 
 <VBox xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="ui.MainMenuController"
+            fx:controller="frontend.MainMenuController"
             stylesheets="/ui/style.css"
             styleClass="mainMenu"
             alignment="BOTTOM_RIGHT"
