--- a/assets/fxml/MainMenu.fxml
+++ b/assets/fxml/MainMenu.fxml
@@ -9,7 +9,7 @@
 <VBox xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
             fx:controller="ui.MainMenuController"
-            stylesheets="/ui/style.css"
+            stylesheets="/fxml/style.css"
             styleClass="mainMenu"
             alignment="BOTTOM_RIGHT"
             spacing="20">
