--- a/assets/fxml/style.css
+++ b/assets/fxml/style.css
@@ -56,6 +56,8 @@
     -fx-border-color: black;
     -fx-border-style: solid;
     -fx-border-width: 1 0 0 0;
+    -fx-pref-height: 45px;
+    -fx-pref-width: 120px;
 }
 
 .assetsButton {
