--- a/assets/fxml/DynamicBoard.fxml
+++ b/assets/fxml/DynamicBoard.fxml
@@ -10,6 +10,7 @@
             xmlns:fx="http://javafx.com/fxml"
             fx:controller="frontend.DynamicBoardController"
             stylesheets="/fxml/board.css"
+            fx:id="dynamicBoard"
             prefHeight="400.0" prefWidth="600.0">
     <HBox>
         <VBox>
