--- a/assets/fxml/board.css
+++ b/assets/fxml/board.css
@@ -77,3 +77,11 @@ Label {
     -fx-border-color: black;
     -fx-border-width: 1px;
 }
+
+.titleCard {
+    -fx-pref-height: 100px;
+    -fx-pref-width: 100px;
+    -fx-border-color: black;
+    -fx-border-width: 1px;
+    -fx-background-color: gray;
+}
