--- a/assets/fxml/board.css
+++ b/assets/fxml/board.css
@@ -79,9 +79,9 @@ Label {
 }
 
 .titleCard {
-    -fx-pref-height: 100px;
-    -fx-pref-width: 100px;
+    -fx-pref-height: 200px;
+    -fx-pref-width: 150px;
     -fx-border-color: black;
-    -fx-border-width: 1px;
-    -fx-background-color: gray;
+    -fx-border-width: 2px;
+    -fx-background-color: white;
 }
