--- a/assets/fxml/style.css
+++ b/assets/fxml/style.css
@@ -117,10 +117,13 @@
 
 .playerBox {
     -fx-background-color: white;
-    -fx-min-width: 250px;
+    -fx-min-width: 600px;
     -fx-min-height: 50px;
-    -fx-max-width: 250px;
+    -fx-max-width: 600px;
     -fx-spacing: 150px;
+    -fx-font-size: 48px;
+    -fx-border-style: solid;
+    -fx-border-width: 3px;
 }
 
 .loadTable {
@@ -134,3 +137,44 @@
     -fx-alignment: center;
 }
 
+#playerList {
+    -fx-spacing: 75px;
+}
+
+.playerRemoveButton {
+    -fx-min-height: 40px;
+    -fx-max-height: 40px;
+    -fx-font-size: 18px;
+    -fx-background-color: silver;
+}
+
+#newGameBackButtonPane {
+    -fx-padding: 50px;
+    -fx-border-style: solid;
+    -fx-border-color: red;
+    -fx-border-width: 2px 2px 0 0;
+}
+
+#newGameStartButtonPane {
+
+    -fx-padding: 50px;
+    -fx-border-style: solid;
+    -fx-border-color: red;
+    -fx-border-width: 2px 0 0 2px;
+}
+
+#newGamePlayersSection {
+    -fx-padding: 100px 150px 0 150px;
+    -fx-spacing: 50px;
+    -fx-border-style: solid;
+    -fx-border-color: red;
+    -fx-border-width: 0 2px 0 0;
+}
+
+.newGameMenuLabel {
+    -fx-font-size: 36px;
+}
+
+#newGameMapSection {
+    -fx-padding: 100px 0 0 150px;
+}
