Added color to assets screen title deed cards

--- a/assets/fxml/style.css
+++ b/assets/fxml/style.css
@@ -185,3 +185,19 @@
 #newGameMapSection {
     -fx-padding: 100px 0 0 150px;
 }
+
+.titleCard {
+    -fx-pref-height: 200px;
+    -fx-pref-width: 150px;
+    -fx-border-color: black;
+    -fx-border-width: 2px;
+    -fx-background-color: white;
+}
+
+.titleCardColorPane {
+    -fx-min-height: 25px;
+    -fx-max-height: 25px;
+    -fx-border-color: black;
+    -fx-border-style: solid;
+    -fx-border-width: 2px;
+}
